flat fix submenuwrap

--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -194,31 +194,15 @@
   }
 }
 
-@media only screen and (min-width:1200px){
+@media only screen and (min-width:768px){
   .sub_menu_wrap{
-    &.items-2{
-      width: $submenu_item_width * 2 + 20px;
-    }
-    &.items-3{
-      width: $submenu_item_width * 3 + 20px;
-    }
-    &.items-4{
-      width: $submenu_item_width * 4 + 20px;
-    }
-    &.items-5{
-      width: $submenu_item_width * 5 + 20px;
-    }
-    &.items-6{
-      width: $submenu_item_width * 5;
-      .sub_menu-item{
-        width: $submenu_item_width - 40px;
+    &.items-2,&.items-3,&.items-4,&.items-5,&.items-6{
+      ul.sub_menu{
+        display: none;
       }
-    }
-    .sub_menu-item{
-      float: left;
-    }
-    ul.sub_menu{
-      display: block !important;
+      .sub_menu-item{
+        float: none;
+      }
     }
   }
 }
@@ -244,7 +228,7 @@
       }
     }
     .sub_menu-item{
-      float: left;
+      float: left !important;
     }
     ul.sub_menu{
       display: block !important;
@@ -252,18 +236,37 @@
   }
 }
 
-@media only screen and (min-width:768px){
+
+@media only screen and (min-width:1200px){
   .sub_menu_wrap{
-    &.items-2,&.items-3,&.items-4,&.items-5,&.items-6{
-      ul.sub_menu{
-        display: none;
-      }
+    &.items-2{
+      width: $submenu_item_width * 2 + 20px;
+    }
+    &.items-3{
+      width: $submenu_item_width * 3 + 20px;
+    }
+    &.items-4{
+      width: $submenu_item_width * 4 + 20px;
+    }
+    &.items-5{
+      width: $submenu_item_width * 5 + 20px;
+    }
+    &.items-6{
+      width: $submenu_item_width * 5;
       .sub_menu-item{
-        float: none;
+        width: $submenu_item_width - 40px;
       }
+    }
+    .sub_menu-item{
+      float: left !important;
+    }
+    ul.sub_menu{
+      display: block !important;
     }
   }
 }
+
+
 
 @media only screen and (max-width:768px){
   .h_bot_part{
